--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
           <div class="footer-social">
             <ul class="list-reset">
               {% if site.instagram %}
-              <li><a href="{{ site.instagram }}/maen_x">Instagram</a></li>
+              <li><a href="{{ site.instagram }}maen_x" target="_blank">Instagram</a></li>
               {% else %} {% endif %}
             </ul>
           </div>
